# package_cookiecutter

./: .gitlab-ci.yml  README.md  cookiecutter.json  setup.cfg  setup.py
{{cookiecutter.project_name_cleaned}}/: .gitlab-ci.yml  Makefile  README.md  requirements.txt  setup.cfg  setup.py  versioneer.py
{{cookiecutter.project_name_cleaned}}/tests/base/: test_base.py
