[metadata]
name = libaicv
version = 0.0.0
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = 

[options]
packages = find:
python_requires = >=3.8
install_requires = 
	tqdm

[options.extras_require]
dev = 
	setuptools
	black
	isort
	pytest
	pytest-cov
	pytest-html
	python-dotenv
	certifi
	versioneer


[versioneer]
VCS = git
style = pep440
versionfile_source = {{cookiecutter.project_name_cleaned}}/_version.py
versionfile_build = {{cookiecutter.project_name_cleaned}}/_version.py
tag_prefix = v
parentdir_prefix = {{cookiecutter.project_name_cleaned}}-
